<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.bit2b.gear.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_searchListActivity"
            app:destination="@id/searchListActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.bit2b.gear.ui.dashboard.DashboardFragment"
        android:label="@string/garage"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.bit2b.gear.ui.notifications.NotificationsFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_notifications" />

    <activity
        android:id="@+id/searchListActivity"
        android:name="com.bit2b.gear.ui.search.SearchListActivity"
        android:label="SearchListActivity"
        tools:layout="@layout/fragment_search_list"
        />
</navigation>