<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <View
        android:id="@+id/center"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/bg_color_f6f6f7_corner"
        app:layout_constraintEnd_toStartOf="@+id/center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_search"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
        />
        
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/icSearch"
            app:layout_constraintStart_toStartOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/myFavoritesCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/bg_color_f6f6f7_corner"
        app:layout_constraintStart_toEndOf="@+id/center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icFavorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_heart_rounded"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_favorites"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/icFavorites"
            app:layout_constraintStart_toStartOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/makeAnnouncementCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_color_f6f6f7_corner"
        app:layout_constraintEnd_toStartOf="@+id/center"
        app:layout_constraintTop_toBottomOf="@+id/searchCard"
        app:layout_constraintStart_toStartOf="parent"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icMakeAnnouncement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_announcement"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
        />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_announcement"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/icMakeAnnouncement"
            app:layout_constraintStart_toStartOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/MyAnnouncementCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/bg_color_f6f6f7_corner"
        app:layout_constraintStart_toEndOf="@+id/center"
        app:layout_constraintTop_toTopOf="@+id/makeAnnouncementCard"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icMyAnnouncement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_notification_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_favorites"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/icMyAnnouncement"
            app:layout_constraintStart_toStartOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>